# langdetect

./: Makefile.am  Makefile.in  configure  configure.ac  langdetect.pc.in  readme.md
autom4te.cache/: output.0  traces.0  traces.1
scripts/: profile_to_code.py
src/: Makefile.am  Makefile.in  code_sequence.cpp  code_sequence.h  langdetect.cpp  langdetect.h
